Creating AdminMenuGUI Added check for duplicate branch name in StockManagementFacade.addBranch